<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_page1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/pages_inicio"/>

    <item
        android:id="@+id/nav_page2"
        android:enabled="true"
        android:icon="@drawable/inbox"
        android:title="@string/pages_historico"/>

    <item
        android:id="@+id/nav_page3"
        android:enabled="true"
        android:icon="@drawable/layers"
        android:title="@string/pages_menu"/>

    <item
        android:id="@+id/nav_page4"
        android:enabled="true"
        android:icon="@drawable/bar_chart"
        android:title="@string/pages_estatisticas"/>

    <item
        android:id="@+id/nav_page5"
        android:enabled="true"
        android:icon="@drawable/settings_1_"
        android:title="@string/pages_definicoes"/>
</menu>